# beautiful_barcode

./: .coverage  .gitignore  .isort.cfg  LICENSE  Makefile  Pipfile  README.md  publish.py  pyproject.toml  pytest-ci.ini  pytest.ini  run  setup.py
.github/workflows/: test.yml
beautiful_barcode/: __init__.py  __main__.py  barcode.py  ean.py  exceptions.py  renderers.py  upc.py  utils.py
test/: test_ean.py  test_renderer.py  test_upc.py  test_utils.py  tutils.py
