[tool.poetry]
name = 'beautiful_barcode'
version = "1.1.2"
description = 'Generate nicely formatted barcodes (UPC-A and EAN)'
authors = [
    'Philipp Hagemeister <phihag@phihag.de>',
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Intended Audience :: Developers',
]
license = 'MIT'
keywords=['barcode', 'UPC']
readme='README.md'

[tool.poetry.dependencies]
python = '>=3.6,<4.0.0'

[tool.poetry.dev-dependencies]
tox = '*'
pytest = '*'
pytest-randomly = '*'
pytest-cov = '*'
pytest-django = '*'
flake8 = '*'
flynt = '*'
autopep8 = '*'
isort = '*'
poetry-publish = "*"  # https://github.com/jedie/poetry-publish

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
