[tool.poetry]
name = 'beautiful_barcode'
version = "1.1.3"
description = 'Generate nicely formatted barcodes (UPC-A and EAN)'
authors = [
    'Philipp Hagemeister <phihag@phihag.de>',
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Intended Audience :: Developers',
]
license = 'MIT'
keywords=['barcode', 'UPC']
readme='README.md'

[tool.poetry.dependencies]
python = '>=3.6,<4.0.0'

[tool.poetry.dev-dependencies]
tox = '*'
pytest = '>=6.2.5'  # https://stackoverflow.com/a/69569206/35070
pytest-randomly = '*'
pytest-cov = '*'
pytest-django = '*'
flake8 = '*'
flynt = '*'
autopep8 = '*'
isort = '*'
poetry-publish = "*"  # https://github.com/jedie/poetry-publish

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
